fix back arrow on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -377,7 +377,8 @@ a:hover {
   }
 
   .back-right {
-    right: 6.25%;
+    right: 10%;
+    top: 0;
   }
 }
 
